# binance-open-interest-download

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  docker-start.sh  main.py  pyproject.toml
binance_open_interest/: __init__.py  __main__.py  binance_downloader.py  config_manager.py  data_storage.py  error_handler.py
config/: config.json  config_example.json  proxy_config_example.txt
scripts/: remove_error_symbols.py  update_config_with_top_symbols.py
